--- a/src/components/home/Carousel.astro
+++ b/src/components/home/Carousel.astro
@@ -22,16 +22,16 @@ import 'swiper/css/pagination';
     <div class="swiper-wrapper">
       <div class="swiper-slide">
         <div class="content px-10 pt-14">
-          <h3 class="text-white text-center text-xl font-bold font-bestley pb-3 md:text-2xl 2xl:text-3xl 2xl:pb-10">Coiffure</h3>
-          <p class="text-white text-center text-sm md:text-base md:px-80 2xl:px-[30rem] 2xl:text-xl">Techniques de coupe, colorimétrie, coiffures tendances… Nos programmes sur-mesure s'adaptent à tous les niveaux, de débutant à professionnel.</p>
-          <a href="/formation#coiffure" class="btn btn-primary mt-6 rounded-tr-lg rounded-bl-lg px-8 bg-white text-black border-none hover:bg-black hover:text-white">Découvrir</a>
+          <h3 class="text-white text-center text-xl font-bold font-bestley pb-3 md:text-2xl 2xl:text-3xl 2xl:pb-10">Browlift & Rehaussement de cils</h3>
+          <p class="text-white text-center text-sm md:text-base md:px-80 2xl:px-[30rem] 2xl:text-xl">Redonnez éclat et intensité au regard avec des techniques maîtrisées. Apprenez à structurer les sourcils et sublimer les cils en toute sécurité, quel que soit votre niveau.</p>
+          <a href="/formation" class="btn btn-primary mt-6 rounded-tr-lg rounded-bl-lg px-8 bg-white text-black border-none hover:bg-black hover:text-white">Découvrir</a>
         </div>
       </div>
       <div class="swiper-slide">
         <div class="content px-10 pt-14">
-          <h3 class="text-white text-center text-xl font-bold font-bestley pb-3 md:text-2xl 2xl:text-3xl 2xl:pb-10">Esthétique</h3>
-          <p class="text-white text-center text-sm md:text-base md:px-80 2xl:px-[30rem] 2xl:text-xl">Perfectionnez votre savoir-faire avec nos formations certifiées en esthétique. Soins du visage, maquillage professionnel, manucure… Nos programmes sur-mesure vous forment aux techniques essentielles pour réussir dans l'univers de la beauté.</p>
-          <a href="/formation#esthetique" class="btn btn-primary mt-6 rounded-tr-lg rounded-bl-lg px-8 bg-white text-black border-none hover:bg-black hover:text-white">Découvrir</a>
+          <h3 class="text-white text-center text-xl font-bold font-bestley pb-3 md:text-2xl 2xl:text-3xl 2xl:pb-10">Création d’entreprise & Soin capillaire au Botox</h3>
+          <p class="text-white text-center text-sm md:text-base md:px-80 2xl:px-[30rem] 2xl:text-xl">Alliez savoir-faire esthétique et esprit d’entrepreneur. Apprenez à lancer votre activité et à maîtriser un soin capillaire tendance, pour offrir des résultats visibles dès la première application.</p>
+          <a href="/formation" class="btn btn-primary mt-6 rounded-tr-lg rounded-bl-lg px-8 bg-white text-black border-none hover:bg-black hover:text-white">Découvrir</a>
         </div>
       </div>
     </div>
