--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -55,14 +55,8 @@
           <div class="flex flex-col items-center justify-center h-full">
             <ul class="menu menu-vertical gap-8 text-2xl">
               <li><a href="/">Accueil</a></li>
-              <li class="dropdown-mobile">
-                <details>
-                  <summary>Nos formations</summary>
-                  <ul class="menu menu-vertical gap-4 pl-4 text-xl">
-                    <li class="mt-6"><a href="/formation/coiffure">Coiffure</a></li>
-                    <li><a href="/formation/esthetique">Esthétique</a></li>
-                  </ul>
-                </details>
+              <li>
+                <a href="/formation">Nos formations</a>
               </li>
               <li><a href="/about">Groupe CP</a></li>
             </ul>
