--- a/src/pages/mentions-legales.astro
+++ b/src/pages/mentions-legales.astro
@@ -12,11 +12,10 @@ import Layout from '../layouts/Layout.astro';
         <p>Le site CP Academy est édité par :</p>
         <ul class="list-disc ml-6 mt-2 space-y-2">
           <li>Raison sociale : CP Academy</li>
-          <li>Forme juridique : [Forme juridique]</li>
-          <li>Capital social : [Montant]</li>
+          <li>Forme juridique : SASU</li>
           <li>Siège social : 20 rue jean mermoz, 33185 Le Haillan</li>
-          <li>SIRET : [Numéro SIRET]</li>
-          <li>Numéro de TVA intracommunautaire : [Numéro TVA]</li>
+          <li>SIRET : 942 288 259 00016</li>
+          <li>Numéro de TVA intracommunautaire : FR94942288259</li>
         </ul>
       </section>
 
