--- a/src/components/home/Carousel.astro
+++ b/src/components/home/Carousel.astro
@@ -16,21 +16,21 @@ import 'swiper/css/pagination';
 
   <!-- Swiper pour le contenu avec effet slide -->
   <div class="swiper content-swiper">
-    <h2 class="fixed-title text-center text-2xl font-bold font-bestley text-white z-10 px-10 md:text-4xl md:pt-10">
+    <h2 class="fixed-title text-center text-2xl font-bold font-bestley text-white z-10 px-10 md:text-4xl md:pt-10 mb-4 md:mb-6 lg:mb-12">
         Des formations diverses et variées
     </h2>
     <div class="swiper-wrapper">
       <div class="swiper-slide">
         <div class="content px-10 pt-14">
-          <h3 class="text-white text-center text-xl font-bold font-bestley pb-3 md:text-2xl 2xl:text-3xl 2xl:pb-10">Browlift & Rehaussement de cils</h3>
+          <h3 class="text-white text-center text-xl font-bold font-bestley pb-3 pt-10 md:text-2xl 2xl:text-3xl 2xl:pb-10">Browlift & Rehaussement de cils</h3>
           <p class="text-white text-center text-sm md:text-base md:px-80 2xl:px-[30rem] 2xl:text-xl">Redonnez éclat et intensité au regard avec des techniques maîtrisées. Apprenez à structurer les sourcils et sublimer les cils en toute sécurité, quel que soit votre niveau.</p>
           <a href="/formation" class="btn btn-primary mt-6 rounded-tr-lg rounded-bl-lg px-8 bg-white text-black border-none hover:bg-black hover:text-white">Découvrir</a>
         </div>
       </div>
       <div class="swiper-slide">
         <div class="content px-10 pt-14">
-          <h3 class="text-white text-center text-xl font-bold font-bestley pb-3 md:text-2xl 2xl:text-3xl 2xl:pb-10">Création d’entreprise & Soin capillaire au Botox</h3>
-          <p class="text-white text-center text-sm md:text-base md:px-80 2xl:px-[30rem] 2xl:text-xl">Alliez savoir-faire esthétique et esprit d’entrepreneur. Apprenez à lancer votre activité et à maîtriser un soin capillaire tendance, pour offrir des résultats visibles dès la première application.</p>
+          <h3 class="text-white text-center text-xl font-bold font-bestley pb-3 md:text-2xl 2xl:text-3xl 2xl:pb-10">Création d'entreprise & Soin capillaire au Botox</h3>
+          <p class="text-white text-center text-sm md:text-base md:px-80 2xl:px-[30rem] 2xl:text-xl">Alliez savoir-faire esthétique et esprit d'entrepreneur. Apprenez à lancer votre activité et à maîtriser un soin capillaire tendance, pour offrir des résultats visibles dès la première application.</p>
           <a href="/formation" class="btn btn-primary mt-6 rounded-tr-lg rounded-bl-lg px-8 bg-white text-black border-none hover:bg-black hover:text-white">Découvrir</a>
         </div>
       </div>
