--- a/src/pages/politique-de-confidentialite.astro
+++ b/src/pages/politique-de-confidentialite.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Politique de Confidentialité - CP Academy">
-  <main class="mx-auto px-10 mentions-legales text-white">
+  <main class="mx-auto px-4 md:px-16 lg:px-32 xl:px-64 2xl:px-96 mentions-legales text-white">
     <h1 class="text-3xl font-bestley mb-8 md:text-4xl">Politique de Confidentialité</h1>
     
     <div class="space-y-8">
@@ -70,5 +70,6 @@ import Layout from '../layouts/Layout.astro';
 <style>
     .mentions-legales {
         padding-top: 12rem;
+        padding-bottom: 6rem;
     }
 </style>
